add_library(frontend
        include/ast.h
        include/error.h
        include/lexer.h
        include/parser.h
        include/symtable.h
        include/token.h
        include/visitor.h
        src/ast.cpp
        src/lexer.cpp
        src/parser.cpp
        src/visitor.cpp
        src/exp_visitor.cpp
        src/block_item_visitor.cpp
        src/def_visitor.cpp
        src/symtable.cpp
)